# dependabot-playground

./: .gitignore  Dockerfile  README.md  action.yaml  build.gradle  package-lock.json  package.json  pom.xml
.github/: dependabot.yml
.github/workflows/: maven.yml
docker/: Dockerfile  java.Dockerfile
gradle/: settings.gradle.kts
gradle/build-logic/src/main/kotlin/: buildlogic.java-common-conventions.gradle.kts
gradle/gradle/: libs.versions.toml
gradle_catalog/gradle/: libs.versions.toml
maven/: pom.xml
npm/: package-lock.json
pnpm/: package.json  pnpm-lock.yaml
poetry/: pyproject.toml
