[project]
name = "poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "yeikel",email = "email@yeikel.com"}
]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.dependencies]
pendulum="3.1.0"
sqlalchemy="2.0.37"

[tool.poetry]
packages = [{include = "poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
